updated the products, renovation, and services pages

--- a/privacy.html
+++ b/privacy.html
@@ -110,7 +110,7 @@
           </div>
           <div class="header__menu__info">
             <div class="header__menu__label">Service Areas:</div>
-            <div class="header__menu__text">Toronto</div>
+            <div class="header__menu__text">Toronto - Thornhill</div>
             <div class="header__menu__text">Markham - Richmond Hill - Vaughan</div>
             <div class="header__menu__text">King City - Aurora - Newmarket - Bradford</div>
           </div>
