--- a/renovation.html
+++ b/renovation.html
@@ -34,7 +34,7 @@
   
   <!-- CSS Stylesheets -->
   <link href="css/site.css" rel="stylesheet">
-  
+
   <!-- Font Awesome for Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
@@ -64,7 +64,7 @@
     </a>
     <div class="header__burger">
       <div class="header__address">720-7 Copeland St, East York, ON M4G 3E7</div>
-      <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+16477745321">+1 647 774 5321</a>
+      <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+16477745321">647-774-5321</a>
       <div id="menu-toggle" class="circleCursor pelement">
         <div class="hamburger">
           <span></span>
@@ -102,7 +102,7 @@
             </div>
             <div class="header__menu__info">
               <div class="header__menu__label">Service Areas:</div>
-              <div class="header__menu__text">Toronto</div>
+              <div class="header__menu__text">Toronto - Thornhill</div>
               <div class="header__menu__text">Markham - Richmond Hill - Vaughan</div>
               <div class="header__menu__text">King City - Aurora - Newmarket - Bradford</div>
             </div>
@@ -251,7 +251,7 @@
 
        <!-- Footer Section -->
    <footer class="footer">
-    <a href="">
+    <a href="index.html">
       <div class="footer__logo"></div>
     </a>
     <div class="footer__text">
