--- a/services.html
+++ b/services.html
@@ -10,9 +10,9 @@
   <!-- Open Graph meta tags for social media sharing -->
   <meta property="og:site_name" content="Services: craftsmanship from start to finish | Maxidom">
   <meta property="og:title" content="Services: craftsmanship from start to finish | Maxidom">
-  <meta property="og:description" content="Maxidom, ✓ Experience ✓ Professionalism ✓ Availability. Design, construction and installation. Maxidom awaits your call.">
+  <meta property="og:description" content="Maxidom, Experience, Professionalism, Availability. Design, construction and installation. Maxidom awaits your call.">
   <meta name="twitter:title" content="Services: craftsmanship from start to finish | Maxidom">
-  <meta name="twitter:description" content="Maxidom, ✓ Experience ✓ Professionalism ✓ Availability. Design, construction and installation. Maxidom awaits your call.">
+  <meta name="twitter:description" content="Maxidom, Experience,  Professionalism, Availability. Design, construction and installation. Maxidom awaits your call.">
 
   <!-- Character encoding -->
   <meta charset="UTF-8">
@@ -33,7 +33,7 @@
   <!-- Open Graph tags for the page URL, type, locale, and image -->
   <meta property="og:url" content="https://www.maxidom.ca/">
   <meta property="og:type" content="website">
-  <meta property="og:locale" content="it_IT">
+  <meta property="og:locale" content="en_EN">
   <meta property="og:image" content="images/facebook.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="627">
@@ -139,12 +139,12 @@
 
 <!-- Header section with logo, contact info, and navigation menu -->
 <header class="header">
-  <a href="">
+  <a href="index.html">
     <div class="header__logo"></div>
   </a>
   <div class="header__burger">
     <div class="header__address">720-7 Copeland St, East York, ON M4G 3E7</div>
-    <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:647-774-5321">+1 647 774 5321</a>
+    <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="+16477745321" href="tel:647-774-5321">647-774-5321</a>
     <div id="menu-toggle" class="circleCursor pelement">
       <div class="hamburger">
         <span></span>
@@ -333,18 +333,26 @@
           <div class="footer__logo"></div>
         </a>
         <div class="footer__text">
-          Maxidom by Stas Morozan | 647-774-5321
+          Maxidom by Stas Morozan
           <br>
-          720-7 Copeland St, East York, ON M4G 3E7
+          720-7 Copeland St, Toronto, ON M4G 3E7
           <br>
-          <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+164777453231">+1 6477 745 3231</a> -
+          <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+16477745321">647-774-5321</a> 
           <a class="ga-events" data-eventcategory="Mail from footer" data-eventaction="Click to action" data-eventlabel="stasma.sm17@gmail.com" href="mailto:stasma.sm17@gmail.com">stasma.sm17@gmail.com</a>
           <br>
           <br>
-          <a href="privacy.html" target="_blank">Privacy policy</a> - 
-          <a class="ga-events" data-eventcategory="Credits link" data-eventaction="Click to action" data-eventlabel="https://www.linkedin.com/in/maxidom/" href="https://www.linkedin.com/in/maxidom/" target="_blank" rel="noopener">Credits</a>
-          <div class="fb-link">
-            <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/maxidom" href="https://www.facebook.com/maxidom" target="_blank"></a>
+          <a href="privacy.html" target="_blank">Privacy policy</a> -
+          <a class="ga-events" data-eventcategory="Credits link" data-eventaction="Click to action" data-eventlabel="https://www.linkedin.com/in/stanislavmorozan/" href="https://www.linkedin.com/in/stanislavmorozan/" target="_blank" rel="noopener">Credits</a>
+          
+          <!-- Social Links -->
+          <div class="social-links">
+            <!-- Facebook Link -->
+            <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/maxidom" href="https://www.facebook.com/maxidom" target="_blank">
+              <i class="fab fa-facebook"></i>
+            </a>
+            <!-- Instagram Link -->
+            <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
+              <i class="fab fa-instagram"></i>
           </div>
         </div>
       </footer>
