--- a/the-process.html
+++ b/the-process.html
@@ -187,7 +187,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
           </div>
         </div>
         <div class="section__generic--content">
-          <h2 class="section__generic__title">"Providing the customer with the best service is the basis of my work"</h2>
+          <h2 class="section__generic__title">Providing the customer with the best service is the basis of our work</h2>
           <div class="section__generic__text">We are a distinguished finish carpentry company specializing in custom homes throughout the GTA, Ontario. At Maxidom, we provide a wide variety of custom wood and millwork services and have seen steady, consistent growth over our years in business. Our values remain the same today—we offer reliable and dependable service, backed by our undeniably committed work ethic and integrity. Collaborating daily with builders, designers, architects, and homeowners, we strive to surpass their expectations of excellence. We take immense pride in our craftsmanship and ensure your complete satisfaction before we consider the job done.</div>
         </div>
       </div>
@@ -242,7 +242,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
         </div>
       </div>
       <div class="section__generic--content">
-        <h2 class="section__generic__title">Quote Delivery... where the first step is taken</h2>
+        <h2 class="section__generic__title">Quote Delivery... receive your detailed estimate </h2>
         <div class="section__generic__text">Within few days, we present a preliminary budget for what can be achieved within the amount you are willing to invest in your renovation.</div>
       </div>
     </div>
@@ -260,7 +260,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
       </div>
     </div>
     <div class="section__generic--content">
-      <h2 class="section__generic__title">Quote Approval & Agreement... where the first step is taken </h2>
+      <h2 class="section__generic__title">Quote Approval & Agreement... finalize and secure the deal </h2>
       <div class="section__generic__text">When the quotation meets the your budget and timeline, the quotation will be converted to an agreement which highlights scope of work, payment breakdown and Maxidom policies.</div>
     </div>
   </div>
@@ -313,7 +313,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
 
   <!-- Footer section -->
   <footer class="footer">
-    <a href="">
+    <a href="index.html">
       <div class="footer__logo"></div>
     </a>
     <div class="footer__text">
