Updated header logo link

--- a/cabinetry.html
+++ b/cabinetry.html
@@ -144,7 +144,7 @@
 
 <!-- Header section with logo, contact info, and navigation menu -->
 <header class="header">
-  <a href="">
+  <a href="index.html">
     <div class="header__logo"></div>
   </a>
   <div class="header__burger">
