--- a/doors.html
+++ b/doors.html
@@ -131,7 +131,7 @@
 
   <!-- Header section with logo and navigation -->
   <header class="header">
-    <a href="">
+    <a href="index.html">
       <div class="header__logo"></div>
     </a>
     <div class="header__burger">
