--- a/finishing-carpentry.html
+++ b/finishing-carpentry.html
@@ -141,8 +141,8 @@
     <div class="header__logo"></div>
   </a>
   <div class="header__burger">
-    <div class="header__address">720-7 Copeland St, East York, ON M4G 3E7</div>
-    <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:647-774-5321">+1 647 774 5321</a>
+    <div class="header__address">Greater Toronto Area, Ontario</div>
+    <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:647-774-5321">647 774 5321</a>
     <div id="menu-toggle" class="circleCursor pelement">
       <div class="hamburger">
         <span></span>
@@ -180,7 +180,7 @@
           </div>
           <div class="header__menu__info">
             <div class="header__menu__label">Service Areas:</div>
-            <div class="header__menu__text">Toronto</div>
+            <div class="header__menu__text">Toronto - Thornhill</div>
             <div class="header__menu__text">Markham - Richmond Hill - Vaughan</div>
             <div class="header__menu__text">King City - Aurora - Newmarket - Bradford</div>
           </div>
