--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
 
  <!-- Logo and Navigation Header-->
 <header class="header">
-<a href="">
+<a href="index.html">
   <div class="header__logo"></div>
 </a>
 <div class="header__burger">
@@ -552,7 +552,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
   </div>
 </div>
 <div class="parallax-container parallax-container--top-right">
-  <div class="parallax parallax-title" data-rellax-speed="2" data-rellax-percentage="0.3">Maxidom</div>
+  <div class="parallax parallax-title" data-rellax-speed="2" data-rellax-percentage="0.3">Who are we</div>
 </div>
 </section>
 
