--- a/privacy.html
+++ b/privacy.html
@@ -67,12 +67,12 @@
     </div>
     
     <header class="header">
-    <a href="">
+    <a href="index.html">
       <div class="header__logo"></div>
     </a>
     <div class="header__burger">
-      <div class="header__address">720-7 Copeland St, East York, ON M4G 3E7</div>
-      <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="0434540006" href="tel:+390434540006">+39 0434 540006</a>
+      <div class="header__address">Greater Toronto Area, Ontario</div>
+      <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:647-774-5321">647 774 5321</a>
       <div id="menu-toggle" class="circleCursor pelement">
         <div class="hamburger">
           <span></span>
