--- a/contacts.html
+++ b/contacts.html
@@ -85,7 +85,7 @@
 
   <!-- Header Section -->
   <header class="header">
-    <a href="">
+    <a href="index.html">
       <div class="header__logo"></div>
     </a>
     <div class="header__burger">
