--- a/crown.html
+++ b/crown.html
@@ -83,7 +83,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
 </div>
 <!-- Header Section -->
 <header class="header">
-<a href="">
+<a href="index.html">
   <div class="header__logo"></div>
 </a>
 <div class="header__burger">
