--- a/renovation.html
+++ b/renovation.html
@@ -59,7 +59,7 @@
 
   <!-- Logo and Navigation Header-->
   <header class="header">
-    <a href="">
+    <a href="index.html">
       <div class="header__logo"></div>
     </a>
     <div class="header__burger">
