--- a/stairs.html
+++ b/stairs.html
@@ -56,7 +56,7 @@
   
   <!-- Logo and Navigation Header -->
   <header class="header">
-    <a href="">
+    <a href="index.html">
       <div class="header__logo"></div>
     </a>
     <div class="header__burger">
