--- a/the-process.html
+++ b/the-process.html
@@ -84,7 +84,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
 
  <!-- Logo and Navigation Header-->
 <header class="header">
-<a href="">
+<a href="index.html">
   <div class="header__logo"></div>
 </a>
 <div class="header__burger">
