--- a/wall-paneling.html
+++ b/wall-paneling.html
@@ -94,7 +94,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
 
 <!-- Header section with logo, contact info, and navigation menu -->
 <header class="header">
-<a href="">
+<a href="index.html">
   <div class="header__logo"></div>
 </a>
 <div class="header__burger">
