updated bottom page section, policy page, smaller screen styling, etc

--- a/contacts.html
+++ b/contacts.html
@@ -50,8 +50,11 @@
    <!-- Leaflet.js CSS -->
    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
+  
   <!-- Font Awesome for Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+
 
   <!-- Google Analytics -->
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-46667632-1"></script>
@@ -205,36 +208,36 @@
           </section>
         </div>
 
-        <!-- Footer Section -->
-        <footer class="footer">
-          <a href="index.html">
-            <div class="footer__logo"></div>
-          </a>
-          <div class="footer__text">
-            Maxidom by Stas Morozan
-            <br>
-            720-7 Copeland St, Toronto, ON M4G 3E7
-            <br>
-            <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+16477745321">647-774-5321</a> 
-            <a class="ga-events" data-eventcategory="Mail from footer" data-eventaction="Click to action" data-eventlabel="stasma.sm17@gmail.com" href="mailto:stasma.sm17@gmail.com">stasma.sm17@gmail.com</a>
-            <br>
-            <br>
-            <a href="privacy.html" target="_blank">Privacy policy</a> -
-            <a class="ga-events" data-eventcategory="Credits link" data-eventaction="Click to action" data-eventlabel="https://www.linkedin.com/in/stanislavmorozan/" href="https://www.linkedin.com/in/stanislavmorozan/" target="_blank" rel="noopener">Credits</a>
-            
-            <!-- Social Links -->
-            <div class="social-links">
-              <!-- Facebook Link -->
-              <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/maxidom" href="https://www.facebook.com/maxidom" target="_blank">
-                <i class="fab fa-facebook"></i>
-              </a>
-              <!-- Instagram Link -->
-              <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
-                <i class="fab fa-instagram"></i>
-              </a>
-            </div>
-          </div>
-        </footer>
+     <!-- Footer section -->
+ <footer class="footer">
+  <a href="index.html">
+    <div class="footer__logo"></div>
+  </a>
+  <div class="footer__text">
+    Maxidom by Stas Morozan
+    <br>
+    720-7 Copeland St, Toronto, ON M4G 3E7
+    <br>
+    <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+16477745321">647-774-5321</a> 
+    <a class="ga-events" data-eventcategory="Mail from footer" data-eventaction="Click to action" data-eventlabel="stasma.sm17@gmail.com" href="mailto:stasma.sm17@gmail.com">stasma.sm17@gmail.com</a>
+    <br>
+    <br>
+    <a href="privacy.html" target="_blank">Privacy policy</a> -
+    <a class="ga-events" data-eventcategory="Credits link" data-eventaction="Click to action" data-eventlabel="https://www.linkedin.com/in/stanislavmorozan/" href="https://www.linkedin.com/in/stanislavmorozan/" target="_blank" rel="noopener">Credits</a>
+    
+     <!-- Social Links -->
+     <div class="social-links">
+      <!-- Facebook Link -->
+      <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/MaxidomMax" href="https://www.facebook.com/MaxidomMax" target="_blank">
+        <i class="fab fa-facebook"></i>
+      </a>
+      <!-- Instagram Link -->
+      <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </div>
+  </div>
+</footer>
 
       </div>
     </main>
