--- a/finishing-carpentry.html
+++ b/finishing-carpentry.html
@@ -327,7 +327,7 @@
               <span class="reveal_title two"></span>
             </div>
             <div class="pageBottom__buttonWrap">
-              <a href="doors.html" class="button pelement linkFrom">Scroll to explore</a>
+              <a href="doors.html" class="button pelement linkFrom">Find out more</a>
             </div>
           </div>
         </div>
@@ -351,16 +351,16 @@
           <a class="ga-events" data-eventcategory="Credits link" data-eventaction="Click to action" data-eventlabel="https://www.linkedin.com/in/stanislavmorozan/" href="https://www.linkedin.com/in/stanislavmorozan/" target="_blank" rel="noopener">Credits</a>
           
           <!-- Social Links -->
-          <div class="social-links">
-            <!-- Facebook Link -->
-            <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/maxidom" href="https://www.facebook.com/maxidom" target="_blank">
-              <i class="fab fa-facebook"></i>
-            </a>
-            <!-- Instagram Link -->
-            <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
-              <i class="fab fa-instagram"></i>
-            </a>
-          </div>
+      <div class="social-links">
+        <!-- Facebook Link -->
+        <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/MaxidomMax" href="https://www.facebook.com/MaxidomMax" target="_blank">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <!-- Instagram Link -->
+        <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
         </div>
       </footer>
     </div>
