--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
   </div>
   <div class="section__generic--content">
     <h1 class="section__generic__title"><br>Custom Finishing Carpentry</h1>
-    <div class="section__generic__text">An Interior Finishing Carpentry company that excels in trim work, door installation, cabinetry, flooring, and stairs refinishing.Turning ideas into personalized creations through evaluation of requests, dimensions, and finishes. Meticulous planning and execution ensure each installation meets unique needs, with flawless integration and professional craftsmanship for enduring quality and satisfaction.</div>
+    <div class="section__generic__text">An Interior Finishing Carpentry company excelling in trim work, door installation, cabinetry, flooring, and stairs refinishing. We turn ideas into personalized creations through careful evaluation of requests, dimensions, and finishes. Our meticulous planning and execution ensure each installation meets unique needs, with flawless integration and professional craftsmanship for enduring quality and satisfaction.</div>
   </div>
 </div>
 <div class="parallax-container parallax-container--top-right">
@@ -629,7 +629,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
       <!-- Social Links -->
       <div class="social-links">
         <!-- Facebook Link -->
-        <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/maxidom" href="https://www.facebook.com/maxidom" target="_blank">
+        <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/MaxidomMax" href="https://www.facebook.com/MaxidomMax" target="_blank">
           <i class="fab fa-facebook"></i>
         </a>
         <!-- Instagram Link -->
