--- a/renovation.html
+++ b/renovation.html
@@ -269,7 +269,7 @@
       <!-- Social Links -->
       <div class="social-links">
         <!-- Facebook Link -->
-        <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/maxidom" href="https://www.facebook.com/maxidom" target="_blank">
+        <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/MaxidomMax" href="https://www.facebook.com/MaxidomMax" target="_blank">
           <i class="fab fa-facebook"></i>
         </a>
         <!-- Instagram Link -->
