--- a/the-process.html
+++ b/the-process.html
@@ -193,7 +193,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
       </div>
     </div>
     <div class="parallax-container parallax-container--center-top">
-      <div class="parallax parallax-title" data-rellax-speed="2" data-rellax-percentage="0.3">Who I am</div>
+      <div class="parallax parallax-title" data-rellax-speed="2" data-rellax-percentage="0.3">About Us</div>
     </div>
   </section>
 
@@ -328,17 +328,17 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
       <a href="privacy.html" target="_blank">Privacy policy</a> -
       <a class="ga-events" data-eventcategory="Credits link" data-eventaction="Click to action" data-eventlabel="https://www.linkedin.com/in/stanislavmorozan/" href="https://www.linkedin.com/in/stanislavmorozan/" target="_blank" rel="noopener">Credits</a>
       
-      <!-- Social Links -->
-      <div class="social-links">
-        <!-- Facebook Link -->
-        <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/maxidom" href="https://www.facebook.com/maxidom" target="_blank">
-          <i class="fab fa-facebook"></i>
-        </a>
-        <!-- Instagram Link -->
-        <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
-          <i class="fab fa-instagram"></i>
-        </a>
-      </div>
+    <!-- Social Links -->
+    <div class="social-links">
+      <!-- Facebook Link -->
+      <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/MaxidomMax" href="https://www.facebook.com/MaxidomMax" target="_blank">
+        <i class="fab fa-facebook"></i>
+      </a>
+      <!-- Instagram Link -->
+      <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </div>
     </div>
   </footer>
   
