--- a/crown.html
+++ b/crown.html
@@ -266,7 +266,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
         <span class="reveal_title two"></span>
       </div>
       <div class="pageBottom__buttonWrap">
-        <a href="wall-paneling.html" class="button pelement linkFrom">Scroll to explore</a>
+        <a href="wall-paneling.html" class="button pelement linkFrom">Find out more</a>
       </div>
     </div>
   </div>
@@ -289,17 +289,17 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
     <a href="privacy.html" target="_blank">Privacy policy</a> -
     <a class="ga-events" data-eventcategory="Credits link" data-eventaction="Click to action" data-eventlabel="https://www.linkedin.com/in/stanislavmorozan/" href="https://www.linkedin.com/in/stanislavmorozan/" target="_blank" rel="noopener">Credits</a>
     
-    <!-- Social Links -->
-    <div class="social-links">
-      <!-- Facebook Link -->
-      <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/maxidom/" href="https://www.facebook.com/maxidom/" target="_blank">
-        <i class="fab fa-facebook"></i>
-      </a>
-      <!-- Instagram Link -->
-      <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
-        <i class="fab fa-instagram"></i>
-      </a>
-    </div>
+  <!-- Social Links -->
+  <div class="social-links">
+    <!-- Facebook Link -->
+    <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/MaxidomMax" href="https://www.facebook.com/MaxidomMax" target="_blank">
+      <i class="fab fa-facebook"></i>
+    </a>
+    <!-- Instagram Link -->
+    <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
+      <i class="fab fa-instagram"></i>
+    </a>
+  </div>
   </div>
 </footer>
 
