--- a/privacy.html
+++ b/privacy.html
@@ -29,6 +29,9 @@
   .grid{position:fixed;z-index:1000;left:0;top:0;width:100%;height:100%;display:flex;pointer-events:none}.grid.off--ready .grid__line{transform:scaleY(1)}.grid.off--ready .grid__logo{opacity:1;transform:translate(-50%,-50%)}.grid.off .grid__fill{transform:scaleX(0)}.grid.off .grid__logo{opacity:0;transform:translate(-50%,-70%);transition-delay:.1s}.grid__logo{position:absolute;top:50%;left:50%;width:250px;height:250px;transform:translate(-50%,-40%);opacity:0;z-index:50;transition:all .4s;background-size:contain;background-position:center center;background-repeat:no-repeat;background-image:url(fonts/logo.svg)}.grid__col{position:relative;width:25%;flex-basis:25%;height:100%}.grid__col:nth-child(2) .grid__fill{transition-delay:.1s}.grid__col:nth-child(2) .grid__line{transition-delay:.1s}.grid__col:nth-child(3) .grid__fill{transition-delay:.2s}.grid__col:nth-child(3) .grid__line{transition-delay:.2s}.grid__col:nth-child(4) .grid__fill{transition-delay:.3s}.grid__col:nth-child(4) .grid__line{transition-delay:.3s}.grid__col:nth-child(5) .grid__fill{transition-delay:.4s}.grid__col:nth-child(5) .grid__line{transition-delay:.4s}.grid__fill{position:absolute;left:0;top:0;width:100%;height:100%;background-color:#1A1818;transform-origin:center right;transition:all .4s cubic-bezier(0.42,0,1,1)}.grid__line{position:absolute;right:0;width:1px;height:100%;background-color:rgba(74,74,74,0.1);transform:scaleY(0);transform-origin:center top;transition:all .5s cubic-bezier(0.42,0,1,1)}.vs-section{position:fixed;top:0;right:0;left:0;width:100%;height:auto;margin:auto;will-change:transform}.touch .vs-section{position:static}.is-virtual-scroll{overflow:hidden}.is-native-scroll.y-scroll{overflow-y:scroll;overflow-x:hidden}.is-native-scroll.x-scroll{overflow-y:hidden;overflow-x:scroll}.vs-scrollbar{display:block;position:absolute;transition:transform .6s}.vs-scrollbar.vs-vertical{top:0;right:-5px;bottom:0;width:15px;height:100%;transform:translate3d(5px,0,0)}.vs-scrollbar.vs-horizontal{bottom:-5px;left:0;right:0;width:100%;height:15px;transform:translate3d(0,5px,0)}.is-dragging .vs-scrollbar.vs-horizontal,.is-dragging .vs-scrollbar.vs-vertical,.vs-scrollbar.vs-horizontal:hover,.vs-scrollbar.vs-vertical:hover{transform:none}.vs-scrollbar .vs-scrolldrag{width:100%;height:auto;background:#ccc;cursor:pointer}.vs-scroll-view{position:relative;width:1px}.cookie{background:rgba(26,24,24,.95);color:#EEECEA;position:fixed;bottom:0;left:0;z-index:9999;width:100%;text-align:center}.cookie__inner{margin:0;padding:5px 160px 5px 5px}@media (max-width:767px){.cookie__inner{line-height:1.1em}}.cookie__msg{font-size:10px}@media (max-width:992px){.cookie__inner{padding:5px}.cookie__msg br{display:none}}a.cookie__info{color:#fab162}.cookie__ok{background-color:transparent;padding:12px 30px;position:absolute;top:9px;right:25px;white-space:nowrap}@media (max-width:992px){.cookie__ok{position:relative;display:block;top:0;right:0;margin:0 auto}}.cursor,.cursor-follower{position:fixed;border-radius:100%;user-select:none;pointer-events:none;z-index:10000}.cursor{background-color:#fab162;width:6px;height:6px;transform:translate(-50%,-50%);transition:width .3s,height .3s,opacity .3s,background-color .3s}.cursor.active{transform:scale(0)}.touch .cursor{display:none}.cursor-follower{background-color:rgba(255,255,255,.3);width:20px;height:20px;transition:.3s cubic-bezier(.25,.1,.25,1) .1s transform,.2s cubic-bezier(.75,-.27,.3,1.33) opacity,.3s cubic-bezier(.75,-.27,.3,1.33) width,.3s cubic-bezier(.75,-.27,.3,1.33) height,.3s cubic-bezier(.75,-.27,.3,1.33) margin;margin-top:-10px;margin-left:-10px}.cursor-follower.active{opacity:.7;transform:scale(3)}.cursor-follower.loading,.touch .cursor-follower{opacity:1;width:60px;height:60px;margin-top:-30px;margin-left:-30px;background-color:transparent;animation:spin 1s cubic-bezier(.25,.1,.25,1) infinite}.cursor-follower.loading{border:3px solid rgba(255,255,255,.1);border-top-color:#fab162;display:block!important}.touch .cursor-follower{top:50%;left:50%;border:3px solid rgba(255,255,255,.1);border-top-color:#fab162;display:none}@keyframes spin{to{transform:rotate(360deg)}}
   </style>
   <link href="css/site.css" rel="stylesheet">
+    <!-- Font Awesome for Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-46667632-1"></script>
   <script>
   window.dataLayer = window.dataLayer || [];
@@ -210,18 +213,21 @@
       <div class="footer__logo"></div>
     </a>
     <div class="footer__text">
-      Maxidom by Stas Morozan | 647-774-5321
+      Maxidom by Stas Morozan 
       <br>
       720-7 Copeland St, East York, ON M4G 3E7
       <br>
-      <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+164777453231">+1 6477 745 3231</a> -
+      <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+164777453231">647-774-5321</a> -
       <a class="ga-events" data-eventcategory="Mail from footer" data-eventaction="Click to action" data-eventlabel="stasma.sm17@gmail.com" href="mailto:stasma.sm17@gmail.com">stasma.sm17@gmail.com</a>
       <br>
       <br>
-      <a href="privacy.html" target="_blank">Privacy policy</a> - 
-      <a class="ga-events" data-eventcategory="Credits link" data-eventaction="Click to action" data-eventlabel="https://www.linkedin.com/in/stanislavmorozan/" href="https://www.linkedin.com/in/stanislavmorozan/" target="_blank" rel="noopener">Credits</a>
-      <div class="fb-link">
-        <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/maxidom" href="https://www.facebook.com/maxidom" target="_blank"></a>
+      
+      <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/MaxidomMax" href="https://www.facebook.com/MaxidomMax" target="_blank">
+        <i class="fab fa-facebook"></i>
+      </a>
+      <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
       </div>
     </div>
   </footer>
