--- a/cabinetry.html
+++ b/cabinetry.html
@@ -258,7 +258,7 @@
 
         <!-- Parallax container for inspiration section -->
         <div class="parallax-container parallax-container--center-top">
-          <div class="parallax parallax-title" data-rellax-speed="2" data-rellax-percentage="0.3">Inspiration</div>
+          <div class="parallax parallax-title" data-rellax-speed="2" data-rellax-percentage="0.3">Inspirations</div>
         </div>
 
         <!-- Image gallery for different cabinetry projects -->
