--- a/finishing-carpentry.html
+++ b/finishing-carpentry.html
@@ -344,7 +344,7 @@
           720-7 Copeland St, Toronto, ON M4G 3E7
           <br>
           <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+16477745321">647-774-5321</a> 
-          <a class="ga-events" data-eventcategory="Mail from footer" data-eventaction="Click to action" data-eventlabel="stasma.sm17@gmail.com" href="mailto:stasma.sm17@gmail.com">stasma.sm17@gmail.com</a>
+          <a class="ga-events" data-eventcategory="Mail from footer" data-eventaction="Click to action" data-eventlabel="info@maxidom.com" href="mailto:info@maxidom.com">info@maxidom.com</a>
           <br>
           <br>
           <a href="privacy.html" target="_blank">Privacy policy</a> -
