updates and adjustments

--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
       "postalCode": "M4G 3E7",
       "streetAddress": "720-7 Copeland St"
     },
-    "email": "stasma.sm17@gmail.com",
+    "email": "info@maxidom.ca",
     "telephone": "+1 647 774 5321",
     "name": "Maxidom",
     "url" : "https://www.maxidom.ca/",
