--- a/finishing-carpentry.html
+++ b/finishing-carpentry.html
@@ -25,7 +25,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-  <link rel="manifest" href="/images/favicon/site.webmanifest">
+  
   <link rel="mask-icon" href="fonts/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#272727">
@@ -378,7 +378,7 @@
     "postalCode": "M4G 3E7",
     "streetAddress": "720-7 Copeland St"
   },
-  "email": "stasma.sm17@gmail.com",
+  "email": "info@maxidom.ca",
   "telephone": "+1 647 774 5321",
   "name": "Maxidom",
   "url": "https://www.maxidom.ca/",
