--- a/contacts.html
+++ b/contacts.html
@@ -160,7 +160,7 @@
                     <strong>Maxidom</strong>
                     <p>720-7 Copeland St, Toronto, ON M4G 3E7</p>
                     <p>Tel: <a href="tel:+1 647 774 5321" target="_blank"> 647-774-5321</a></p>
-                    <p>Email: <a href="mailto:info@maxidom.ca" target="_blank">info@maxidom.ca</a></p>
+                    <p>Email: <a href="mailto:info@maxidom.net" target="_blank">info@maxidom.net</a></p>
                     <p><strong>Service Areas:</strong></p>
                     <p>Toronto - Thornhill</p>
                     <p>Markham - Richmond Hill - Vaughan</p>
@@ -188,7 +188,7 @@
                   <p>For any questions, additional information, or to request a quote, please feel free to email us. We will reply as soon as possible.</p>
                 </div>
                 <div class="contacts__buttonWrap">
-                  <a class="button pelement ga-events" data-eventcategory="Mail from contact" data-eventaction="Click to action" data-eventlabel="info@maxidom.ca" href="mailto:info@maxidom.ca">Write us an email</a>
+                  <a class="button pelement ga-events" data-eventcategory="Mail from contact" data-eventaction="Click to action" data-eventlabel="info@maxidom.net" href="mailto:info@maxidom.net">Write us an email</a>
                 </div>
               </div>
             </div>
@@ -222,7 +222,7 @@
                     <i class="fab fa-facebook"></i>
                 </a>
                 <!-- Instagram Link -->
-                <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
+                <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_/" href="https://www.instagram.com/maxidom_/" target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
             </div>
@@ -243,12 +243,12 @@
         "postalCode": "M4G 3E7",
         "streetAddress": "720-7 Copeland St"
       },
-      "email": "info@maxidom.ca",
+      "email": "info@maxidom.net",
       "telephone": "+16477745321",
       "name": "Maxidom",
-      "url" : "https://www.maxidom.ca/",
+      "url" : "https://www.maxidom.net/",
       "BN": "01750420935",
-      "logo": "https://www.maxidom.ca/img/share/logo.png"
+      "logo": "https://www.maxidom.net/img/share/logo.png"
     }
   </script>
 
