--- a/cabinetry.html
+++ b/cabinetry.html
@@ -31,7 +31,7 @@
   <meta name="theme-color" content="#272727">
 
   <!-- Open Graph tags for the page URL, type, locale, and image -->
-  <meta property="og:url" content="https://www.maxidom.ca/">
+  <meta property="og:url" content="https://www.maxidom.net/">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="it_IT">
   <meta property="og:image" content="images/facebook.jpg">
@@ -40,8 +40,8 @@
 
   <!-- Twitter card settings -->
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:url" content="https://www.maxidom.ca/">
-  <meta name="twitter:image" content="https://www.maxidom.ca/images/share/facebook.jpg">
+  <meta name="twitter:url" content="https://www.maxidom.net/">
+  <meta name="twitter:image" content="https://www.maxidom.net/images/share/facebook.jpg">
 
   <!-- Custom styles for the grid and cursor effects -->
   <style>
@@ -356,7 +356,7 @@
           <i class="fab fa-facebook"></i>
         </a>
         <!-- Instagram Link -->
-        <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
+        <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_/" href="https://www.instagram.com/maxidom_/" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
       </div>
@@ -377,10 +377,10 @@
         "postalCode": "M4G 3E7",
         "streetAddress": "720-7 Copeland St"
       },
-      "email": "info@maxidom.ca",
+      "email": "info@maxidom.net",
       "telephone": "+1 647 774 5321",
       "name": "Maxidom",
-      "url" : "https://www.maxidom.ca/",
+      "url" : "https://www.maxidom.net/",
       "BN": "01750420935",
       "logo": "https://www.maxidom.ca/img/share/logo.png"
     }
