--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 <link rel="mask-icon" href="fonts/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#272727">
-<meta property="og:url" content="https://www.maxidom.ca/">
+<meta property="og:url" content="https://www.maxidom.net/">
 <meta property="og:type" content="website">
 <meta property="og:locale" content="en_EN">
 <meta property="og:image" content="images/facebook.gif">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="627">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:url" content="https://www.maxidom.ca/">
-<meta name="twitter:image" content="https://www.maxidom.ca/images/share/facebook.gif">
+<meta name="twitter:url" content="https://www.maxidom.net/">
+<meta name="twitter:image" content="https://www.maxidom.net/images/share/facebook.gif">
 <style>
 .grid{position:fixed;z-index:1000;left:0;top:0;width:100%;height:100%;display:flex;pointer-events:none}
 .grid.off--ready .grid__line{transform:scaleY(1)}
@@ -633,7 +633,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
           <i class="fab fa-facebook"></i>
         </a>
         <!-- Instagram Link -->
-        <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
+        <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_/" href="https://www.instagram.com/maxidom_/" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
       </div>
@@ -655,12 +655,12 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
       "postalCode": "M4G 3E7",
       "streetAddress": "720-7 Copeland St"
     },
-    "email": "info@maxidom.ca",
+    "email": "info@maxidom.net",
     "telephone": "+1 647 774 5321",
     "name": "Maxidom",
-    "url" : "https://www.maxidom.ca/",
+    "url" : "https://www.maxidom.net/",
     "BN": "01252340935",
-    "logo": "https://www.maxidom.ca/img/share/logo.png"
+    "logo": "https://www.maxidom.net/img/share/logo.png"
   }
 </script>
 
