--- a/privacy.html
+++ b/privacy.html
@@ -25,15 +25,15 @@
     <meta name="theme-color" content="#272727">
     
      <!-- Open Graph and Twitter Card settings for social media -->
-    <meta property="og:url" content="https://www.maxidom.ca/">
+    <meta property="og:url" content="https://www.maxidom.net/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_EN">
     <meta property="og:image" content="images/facebook.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="627">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="https://www.maxidom.ca/">
-    <meta name="twitter:image" content="https://www.maxidom.ca/images/share/facebook.jpg">
+    <meta name="twitter:url" content="https://www.maxidom.net/">
+    <meta name="twitter:image" content="https://www.maxidom.net/images/share/facebook.jpg">
    
     <!-- Custom CSS for the site -->
    <style>
@@ -244,7 +244,7 @@
       <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/MaxidomMax" href="https://www.facebook.com/MaxidomMax" target="_blank">
         <i class="fab fa-facebook"></i>
       </a>
-      <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
+      <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_/" href="https://www.instagram.com/maxidom_/" target="_blank">
         <i class="fab fa-instagram"></i>
       </a>
       </div>
@@ -266,12 +266,12 @@
 "postalCode": "M4G 3E7",
 "streetAddress": "720-7 Copeland St"
 },
-"email": "info@maxidom.ca",
+"email": "info@maxidom.net",
 "telephone": "+1 647 774 5321",
 "name": "Maxidom",
-"url": "https://www.maxidom.ca/",
+"url": "https://www.maxidom.net/",
 "BN": "01750420935",
-"logo": "https://www.maxidom.ca/img/share/logo.png"
+"logo": "https://www.maxidom.net/img/share/logo.png"
 }
 </script>
 
